# speech-defect-detector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: data.yaml
configs/logging/: logging.yaml
configs/model/: model.yaml
configs/training/: training.yaml
data/: raw.dvc
speech_defect_detector/: __init__.py  commands.py
speech_defect_detector/data/: dataset.py  download.py
speech_defect_detector/models/: speech_classifier.py
speech_defect_detector/training/: lightning_module.py  trainer.py
